--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -71,3 +71,22 @@ app-news {
   scroll-snap-align: start;
   flex: 0 0 auto; /* ensures horizontal layout */
 }
+
+.gradient-wrapper {
+  background: linear-gradient(to right, #1e90ff, #87cefa); /* Deep blue to light blue */
+  position: relative;
+  overflow: hidden;
+}
+
+.gradient-wrapper::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 80px;
+  background: url('data:image/svg+xml;utf8,<svg viewBox="0 0 1440 320" xmlns="http://www.w3.org/2000/svg"><path fill="%23ffffff" fill-opacity="1" d="M0,224L60,229.3C120,235,240,245,360,234.7C480,224,600,192,720,181.3C840,171,960,181,1080,197.3C1200,213,1320,235,1380,245.3L1440,256L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"/></svg>')
+    no-repeat;
+  background-size: cover;
+}
+
