--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,12 @@
 <div class="container-fuild header">
  <app-home-header></app-home-header>
 </div>
-<div class="container">
-  <div class="row">
-    
-    <div class="col-12 mt-4 overflow-hidden">
-      <app-slider></app-slider>
+<div class="container-fluid gradient-wrapper py-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <app-slider></app-slider>
+      </div>
     </div>
   </div>
 </div>
@@ -59,17 +60,5 @@
   </div>
 </div>
 </div>
-<div class="container-fluid bg-blue">
-  <div class="col-12 ">
-    <div class="container">
-      <div class="row mt-3 p-2">
-        <div class="col-8">
-          <div class="text-white">©​រក្សាសិទ្ធគ្រប់យ៉ាង</div>
-        </div>
-        <div class="col-4">
-          <div class="text-warning">www.poipetcomputercenter.com</div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+
+<app-footer></app-footer>
