--- a/src/app/slider/slider.component.css
+++ b/src/app/slider/slider.component.css
@@ -1,32 +1,3 @@
-.slider-item {
-    margin: 10px;
-    text-align: center;
-  }
-  
-  .slider-item img {
-    width: 100%;
-    max-width: 600px;
-    border-radius: 10px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-  }
-  .width-img{
-    width: 100%;
-    height: 500px;
-  }
-.carousel-image {
-  width: 100%;
-  height: 600px;
-  object-fit: cover;
-}
-
-@media (max-width: 768px) {
-  .carousel-image {
-    height: 350px;
-  }
-}
-
-@media (max-width: 576px) {
-  .carousel-image {
-    height: 250px;
-  }
+.shadow-card{
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
